# fm-rust-CLI

./: Cargo.toml  README.md
app/: Cargo.toml
app/src/: main.rs
builder/: Cargo.toml
builder/src/: lib.rs
create_file/: Cargo.toml
create_file/src/: lib.rs
exceptions/: Cargo.toml
exceptions/src/: lib.rs
utils/: Cargo.toml
utils/src/: lib.rs
