[package]
name = "builder"
version = "0.1.0"
authors = ["Álvaro Araújo <alvarobasilioedmar@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
create_file = { path = "../create_file" }
exceptions = { path = "../exceptions" }